# LankaSat-Live

./: .gitignore  DEPLOY_VERCEL.md  README.md  renovate.json  vercel.json
.github/workflows/: deploy-vercel-main.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  cache.py  chatbot.py  config.py  flood_api.py  main.py  relief_directory.py  sentinel.py  shelters.py  supabase_client.py  weather.py
backend/tests/: test_api.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js  vite.config.js.timestamp-1764575043965-28515adee1146.mjs
frontend/data/: Flood relief donation directory - General.csv  json.txt
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Chatbot.jsx  DateSlider.jsx  FloodPanel.jsx  Header.jsx  LayerSelector.jsx  Legend.jsx  LoadingOverlay.jsx  LockedScreen.jsx  MapView.jsx  Sidebar.jsx  WeatherPanel.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: LoginPage.jsx  RegisterPage.jsx  RegisterShelterPage.jsx  ReliefDirectoryPage.jsx  ShelterMapPage.jsx
frontend/src/services/: api.js  auth.js  layers.js  reliefDirectory.js  shelters.js
